# jocassid-commons

./: .gitignore  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
src/jocassid_commons/: __init__.py  accumulator_dict.py  data_structures.py  dirf.py  example.py  json.py  string.py
tests/: test_accumulator_dict.py  test_data_structures.py  test_dirf.py  test_json.py  test_string.py
