[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jocassid-commons"
version = "0.0.8"
authors = [
    { name="John Cassidy", email="author@example.com" },
]
maintainers = [
    { name="John Cassidy", email="author@example.com" },
]
description = "Miscellaneous utility functions"
readme = "README.md"
requires-python = ">=3.8"
clasifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/jocassid/jocassid-commons"
"Bug Tracker" = "https://github.com/jocassid/jocassid-commons/issues"

